[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

description = "A simple GUI news reader app"
license = "MIT"
authors = ["creativcoder", "celeri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1.0.145", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
newsapi = { git = "ssh://git@github.com/c-leri/newsapi.git" }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
gloo-timers = "0.2.4"
wasm-bindgen-futures = "0.4.33"

[package.metadata.rpm]
package = "headlines"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
headlines = { path = "/usr/bin/headlines" }
